base/gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-https-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.zacdn.net"
      tls:
        mode: Terminate
        certificateRefs:
          - name: zacdn-tls
            kind: Secret
            group: ""
            namespace: istio-ingress
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            gateway: external-https-gateway
