base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-http-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.zacdn.net"  # Hoặc bỏ nếu không cần lọc host
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: zacdn-tls
            namespace: istio-ingress
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            gateway: https-gateway
